# tantivy-py

./: Cargo.toml
src/: index.rs  searcher.rs
tests/: search_test.py  tantivy_test.py
