[package]
name = "tantivy-py"
version = "0.10.1"
authors = ["Damir Jelić <poljar@termina.org.uk>"]
edition = "2018"
license = "MIT"

[lib]
name = "tantivy"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4"
tantivy = { git = "https://github.com/tantivy-search/tantivy", rev = "7e08e0047bf842d2ce0f9cd7791451bffb85e2f6" }
itertools = "0.8"

[dependencies.pyo3]
version = "0.7.0"
features = ["extension-module"]
